Fri Sep 03 13:04:42 BST 2004  Olly Betts <olly@survex.com>

	* python/Makefile.am: Byte compile the python code and install that
	  too.

Fri Sep 03 13:03:55 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Tell libtool not to build static libraries as the
	  bindings all need dynamic ones which can be loaded at runtime.

Wed Sep 01 12:07:08 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Require Python >= 2.1 for __cmp__ and __eq__.

Thu Aug 19 17:20:45 BST 2004  Olly Betts <olly@survex.com>

	* php4/docs/bindings.html: Document that the 2 argument form of
	  Xapian::Auto::open() for opening a writable database is wrapped
	  as open_writable() (bug #32).

Thu Aug 12 13:26:16 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Check that the bindings version matches the version of
	  the xapian library.

Thu Aug 12 13:15:01 BST 2004  Olly Betts <olly@survex.com>

	* configure.in,php4/: Include xapian version in output from phpinfo().

Fri Jul 02 14:27:42 BST 2004  Olly Betts <olly@survex.com>

	* php4/docs/bindings.html: Reference to Xapian::Auto::DB_* should be
	  Xapian::DB_*.

Wed Jun 30 14:54:48 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Version 0.8.1; Corrected --without-tcl help to say
	  it disables Tcl (not Java!) and list the SWIG bindings which
	  --without-swig disables; note that SWIG 1.3.21 isn't relevant
	  and the SWIG changelog URL.

Wed Jun 30 00:09:58 BST 2004  Olly Betts <olly@survex.com>

	* NEWS: Updated for 0.8.1 release.

Tue Jun 29 23:26:36 BST 2004  Eric B. Ridge <ebr@tcdi.com>

	* java/native/,java/org/xapian/: Updates to java bindings:
	  - cleanup usages of XapianObjectHolder to be  explicitly created
	    during library initialization
	  - make finalize() methods of Database and WritableDatabase public so
	    they can be called from the outside world (should probably have
	    added explicit close() methods instead).
	  - deprecate document_add_term_nopos(); completely remove from C++
	    wrapper
